[gd_scene load_steps=9 format=3 uid="uid://c5vglujcpdyca"]

[ext_resource type="Script" uid="uid://dwch7lm6uhvue" path="res://script/particle_manager.gd" id="1_kn3sa"]
[ext_resource type="Texture2D" uid="uid://d1u5w12g3jqqk" path="res://assets/50_poin.png" id="2_mx6mc"]
[ext_resource type="Texture2D" uid="uid://xlm3m6qpvsa7" path="res://assets/1000_poin.png" id="3_mx6mc"]

[sub_resource type="Gradient" id="Gradient_07g1o"]
offsets = PackedFloat32Array(0.353234, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_mx6mc"]
offsets = PackedFloat32Array(0.834146, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.52549)

[sub_resource type="Curve" id="Curve_mx6mc"]
_limits = [0.0, 25.0, 0.0, 1.0]
_data = [Vector2(0, 25), 0.0, 0.0, 0, 0, Vector2(1, 5.16854), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_26brv"]
offsets = PackedFloat32Array(0.707317, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.65098)

[sub_resource type="Gradient" id="Gradient_gp5p6"]
offsets = PackedFloat32Array(0.263415, 0.595122, 1)
colors = PackedColorArray(0.870588, 0.345098, 0.345098, 1, 1, 0.482353, 0.482353, 1, 1, 1, 1, 1)

[node name="ParticleManager" type="Node2D"]
z_index = 1
script = ExtResource("1_kn3sa")

[node name="particle_50" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 1
texture = ExtResource("2_mx6mc")
lifetime = 0.4
one_shot = true
gravity = Vector2(0, -980)
color_ramp = SubResource("Gradient_07g1o")

[node name="particle_1000" type="CPUParticles2D" parent="."]
z_index = 1
rotation = -0.00197034
emitting = false
amount = 1
texture = ExtResource("3_mx6mc")
lifetime = 0.4
one_shot = true
gravity = Vector2(0, -980)
color_ramp = SubResource("Gradient_07g1o")

[node name="TypingParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 4
lifetime = 0.4
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
randomness = 0.3
lifetime_randomness = 0.5
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, 900)
initial_velocity_min = 300.0
initial_velocity_max = 350.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
scale_amount_min = 10.0
scale_amount_max = 12.0
color_ramp = SubResource("Gradient_mx6mc")

[node name="BreakParticle" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.8
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
lifetime_randomness = 0.24
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 900)
initial_velocity_min = 300.0
initial_velocity_max = 350.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
scale_amount_curve = SubResource("Curve_mx6mc")
color_ramp = SubResource("Gradient_26brv")
color_initial_ramp = SubResource("Gradient_gp5p6")
